[package]
name = "nexus-compiler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
regex = "1.7.1"
log = "0.4"
console_log = { version = "0.2.0", features = ["color"] }
console_error_panic_hook = "0.1.7"
strum = { version = "0.24.1", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.60"
features = [
    'Window',
    'Document',
    'Element',
    'HtmlElement',
    'HtmlTextAreaElement',
    'HtmlSelectElement',
    'HtmlOptionElement'
]